--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.4",
     "jest": "^26.1.0",
+    "mongodb-memory-server": "^6.6.1",
     "supertest": "^4.0.2"
   }
 }
