--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My personal time tracker",
   "main": "index.js",
   "scripts": {
-    "test": "jest .",
+    "test": "jest",
     "start": "node server"
   },
   "keywords": [],
