--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.9.21"
   },
   "devDependencies": {
+    "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
