--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "mongoose": "^5.9.21"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
+    "@types/mongoose": "^5.7.30",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "htm": "^3.0.4",
