--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "mongoose": "^5.9.21"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.30",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@types/supertest": "^2.0.10",
     "htm": "^3.0.4",
     "jest": "^26.1.0",
     "mongodb-memory-server": "^6.6.1",
