--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "@types/supertest": "^2.0.10",
+    "@types/uikit": "^3.3.1",
     "htm": "^3.0.4",
     "jest": "^26.1.0",
     "mongodb-memory-server": "^6.6.1",
