--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.157",
     "@types/mongoose": "^5.7.30",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
