Get rid of remaining TypeScript errors (UIKit types are wrong).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "sourceRoot": ".",
     "inlineSourceMap": true,
-    "outDir": "out"
+    "outDir": "out",
+    "target": "ES6"
   }
 }
