--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceRoot": ".",
     "inlineSourceMap": true,
     "outDir": "out",
-    "target": "ES6"
+    "target": "ES2017",
+    "module": "CommonJS"
   }
 }
